--- a/prj/client/mex_remote_call_vs15/remote_call.vcxproj
+++ b/prj/client/mex_remote_call_vs15/remote_call.vcxproj
@@ -98,21 +98,37 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\..\..\..\sys\win32\mbin\</OutDir>
+    <IntDir>..\..\..\sys\win32\.objects\$(ProjectName)\</IntDir>
+    <TargetExt>.mexw32</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\..\..\..\sys\win64\mbin\</OutDir>
+    <IntDir>..\..\..\sys\win64\.objects\$(ProjectName)\</IntDir>
+    <TargetExt>.mexw64</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>..\..\..\..\sys\rasp_win\mbin\</OutDir>
+    <IntDir>..\..\..\sys\rasp_win\.objects\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\..\..\..\sys\win32\mbin\</OutDir>
+    <IntDir>..\..\..\sys\win32\.objects\$(ProjectName)\</IntDir>
+    <TargetExt>.mexw32</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\..\..\..\sys\win64\mbin\</OutDir>
+    <IntDir>..\..\..\sys\win64\.objects\$(ProjectName)\</IntDir>
+    <TargetExt>.mexw64</TargetExt>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>..\..\..\..\sys\rasp_win\mbin\</OutDir>
+    <IntDir>..\..\..\sys\rasp_win\.objects\$(ProjectName)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -120,11 +136,16 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;WIN32;_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include;V:\x86_win32\lib\include\matlab</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>V:\x86_win32\lib</AdditionalLibraryDirectories>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -133,11 +154,16 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Program Files\Matlab\R2015a\extern\lib\win64\microsoft;C:\Program Files\Matlab\R2016a\extern\lib\win64\microsoft;C:\Program Files\Matlab\R2011b\extern\lib\win64\microsoft</AdditionalLibraryDirectories>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
@@ -146,11 +172,15 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;_DEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -161,13 +191,18 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;WIN32;NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include;V:\x86_win32\lib\include\matlab</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>V:\x86_win32\lib</AdditionalLibraryDirectories>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -178,13 +213,18 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <AdditionalLibraryDirectories>C:\Program Files\Matlab\R2015a\extern\lib\win64\microsoft;C:\Program Files\Matlab\R2016a\extern\lib\win64\microsoft;C:\Program Files\Matlab\R2011b\extern\lib\win64\microsoft</AdditionalLibraryDirectories>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -195,16 +235,41 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>SOCKT_SRC_USAGE;WIN32;NDEBUG;_WINDOWS;_USRDLL;REMOTE_CALL_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>../../../include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>libmx.lib;libmex.lib</AdditionalDependencies>
+      <ModuleDefinitionFile>../../../src/deffiles/modulemex1.def</ModuleDefinitionFile>
+      <ImportLibrary />
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\src\client\matlab_engine_clienttcp.cpp" />
+    <ClCompile Include="..\..\..\src\client\mex_remote_call.cpp" />
+    <ClCompile Include="..\..\..\src\common\asocketb.cpp" />
+    <ClCompile Include="..\..\..\src\common\asockettcp.cpp" />
+    <ClCompile Include="..\..\..\src\util\matlab_bytestream_routines.cpp" />
+    <ClCompile Include="..\..\..\src\util\matlab_engine_mathandlebase.cpp" />
+    <ClCompile Include="..\..\..\src\util\matlab_engine_mathandlemexbase.cpp" />
+    <ClCompile Include="..\..\..\src\util\matlab_engine_serializer.cpp" />
+    <ClCompile Include="..\..\..\src\util\matlab_pipe_name.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\include\asocketb.h" />
+    <ClInclude Include="..\..\..\include\asockettcp.h" />
+    <ClInclude Include="..\..\..\include\common_fifofast.hpp" />
+    <ClInclude Include="..\..\..\include\matlab_bytestream_routines.h" />
+    <ClInclude Include="..\..\..\include\matlab_engine_mathandlebase.hpp" />
+    <ClInclude Include="..\..\..\include\matlab_engine_mathandlemexbase.hpp" />
+    <ClInclude Include="..\..\..\src\client\matlab_engine_clienttcp.hpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\include\common_fifofast.tos" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
