--- a/prj/doocs/matlabengine_mngr_doocs_server_vs15/matlabengine_mngr_doocs_server.vcxproj
+++ b/prj/doocs/matlabengine_mngr_doocs_server_vs15/matlabengine_mngr_doocs_server.vcxproj
@@ -27,22 +27,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{41490CBF-29BE-4C1F-B230-4265350252ED}</ProjectGuid>
+    <ProjectGuid>{1E4C2A97-1C81-4767-AACB-EB33F2FAD0E0}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>matlab_engine_mngr_doocs_server</RootNamespace>
+    <RootNamespace>matlabengine_mngr_doocs_server</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -55,7 +55,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -68,7 +68,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -98,39 +98,33 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\..\..\..\sys\win32\bin\</OutDir>
     <IntDir>..\..\..\sys\win32\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
+    <OutDir>..\..\..\..\sys\win32\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>..\..\..\..\sys\win64\bin\</OutDir>
     <IntDir>..\..\..\sys\win64\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>..\..\..\..\sys\rasp_win\bin\</OutDir>
     <IntDir>..\..\..\sys\rasp_win\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
+    <OutDir>..\..\..\..\sys\rasp_win\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\..\..\..\sys\win32\bin\</OutDir>
     <IntDir>..\..\..\sys\win32\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
+    <OutDir>..\..\..\..\sys\win32\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>..\..\..\..\sys\win64\bin\</OutDir>
     <IntDir>..\..\..\sys\win64\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>..\..\..\..\sys\rasp_win\bin\</OutDir>
     <IntDir>..\..\..\sys\rasp_win\.objects\$(ProjectName)\</IntDir>
-    <TargetName>matlabengine_mngr_doocs_server</TargetName>
+    <OutDir>..\..\..\..\sys\rasp_win\bin\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,12 +133,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>W:\remote_function_call\sources\utils;../../../../wlac/include;../../../sources/serverlib;../../../sources/clientlib;../../../sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -155,16 +148,16 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../../src/client;../../../include;W:\remote_function_call\sources\utils;../../../../wlac/include;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) C:\export\doocs\server\matlabengine_mngr_doocs_server.exe\matlabengine_mngr_doocs_server.exe</Command>
+      <Command>copy $(TargetPath) C:\export\doocs\server\$(TargetFileName)\.</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
@@ -174,12 +167,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>W:\remote_function_call\sources\utils;../../../../wlac/include;../../../sources/serverlib;../../../sources/clientlib;../../../sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -192,14 +184,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>W:\remote_function_call\sources\utils;../../../../wlac/include;../../../sources/serverlib;../../../sources/clientlib;../../../sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -212,18 +203,18 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>../../../src/client;../../../include;W:\remote_function_call\sources\utils;../../../../wlac/include;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011a\extern\include;C:\Program Files\Matlab\R2015a\extern\include;C:\Program Files\Matlab\R2016a\extern\include;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(TargetPath) C:\export\doocs\server\matlabengine_mngr_doocs_server.exe\matlabengine_mngr_doocs_server.exe</Command>
+      <Command>copy $(TargetPath) C:\export\doocs\server\$(TargetFileName)\.</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -235,14 +226,13 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>use_mat_matrix;WIN32;SOCKT_SRC_USAGE;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>W:\remote_function_call\sources\utils;../../../../wlac/include;../../../sources/serverlib;../../../sources/clientlib;../../../sources/clientlib/pktrclntlib;C:\Program Files\Matlab\R2011b\extern\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../../../src/client;../../../include;../../../../wlac/include;W:\remote_function_call\sources\utils;W:\doocs\sources/serverlib;W:\doocs/sources/clientlib;W:\doocs\sources/clientlib/pktrclntlib</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>../../../../lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>EqServer.lib;DOOCSapi.lib;wlac.lib;remote_function_call.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -253,6 +243,22 @@
     <ClCompile Include="..\..\..\src\common\common_functionalities.cpp" />
     <ClCompile Include="..\..\..\src\common\common_serializer.cpp" />
     <ClCompile Include="..\..\..\src\common\common_socketbase.cpp" />
+    <ClCompile Include="..\..\..\src\cpp11\mutex_cpp11.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\cpp11\thread_cpp11.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\..\..\src\doocs\matlab_engine_mngr_eqfctmngr.cpp" />
     <ClCompile Include="..\..\..\src\doocs\matlab_engine_mngr_eqfctproxy.cpp" />
     <ClCompile Include="..\..\..\src\doocs\rpc_matlab_engine_mngr_doocs_server.cpp" />
@@ -263,13 +269,23 @@
     <ClCompile Include="..\..\..\src\util\matlab_pipe_name.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\asocketb.h" />
+    <ClInclude Include="..\..\..\include\asockettcp.h" />
     <ClInclude Include="..\..\..\include\common_defination.h" />
+    <ClInclude Include="..\..\..\include\common_serializer.hpp" />
+    <ClInclude Include="..\..\..\include\common_socketbase.hpp" />
+    <ClInclude Include="..\..\..\include\common_unnamedsemaphorelite.hpp" />
+    <ClInclude Include="..\..\..\include\matlab_engine_serializer.hpp" />
+    <ClInclude Include="..\..\..\include\matlab_engine_serializer_versioning.hpp" />
+    <ClInclude Include="..\..\..\include\mat_matrix.h" />
+    <ClInclude Include="..\..\..\include\mutex_cpp11.hpp" />
     <ClInclude Include="..\..\..\include\thread_cpp11.hpp" />
     <ClInclude Include="..\..\..\src\client\matlab_engine_clienttcp.hpp" />
     <ClInclude Include="..\..\..\src\doocs\matlab_engine_mngr_eqfctmngr.hpp" />
     <ClInclude Include="..\..\..\src\doocs\matlab_engine_mngr_eqfctproxy.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\..\include\mat_matrix.tos" />
     <None Include="..\..\..\include\thread_cpp11.tos" />
     <None Include="..\..\..\src\doocs\matlab_engine_mngr_eqfctproxy.tos" />
   </ItemGroup>
