added prj/common for handling common stuff

--- a/.gitignore
+++ b/.gitignore
@@ -2,35 +2,65 @@
 *~
 *.obj
 *.pro.user*
-prj/*/*/Makefile*
-prj/daqadcreceiver/daqadcreceiver_qt/daqadcreceiver
+.tmp/*
+contrib/sys/*/*/*/*
+contrib/sys/*/lib/*
+contrib/sys/*/dll/*
+contrib/sys/*/bin/*
+!contrib/sys/*/*/*.udoc
+!contrib/sys/*/*.udoc
+!contrib/sys/*.udoc
+!contrib/sys/*/doocs64_install/server/*.bat
+sys/*/*/*/*
+sys/*/*/*
+sys/*/lib/*
+sys/*/dll/*
 sys/*/bin/*
-sys/*/mbin/*
-sys/*/.objects/*
-prj/*/*/debug/*
-prj/*/*/release/*
-moc_*.cpp
-workspaces
-.gitattributes
-prj/*/*/x64
-prj/*/*/Win32
-prj/*/*/*.filters*
-!sys/*/bin/setup_environment.bat
-projects/tests/cli_wallet_test_vs15/*
-!projects/tests/cli_wallet_test_vs15/cli_wallet_test.vcxproj
-!projects/tests/cli_wallet_test_vs15/cli_wallet_test.sln
-projects/tests/cli_wallet_test_vs13/*
-!projects/tests/cli_wallet_test_vs13/cli_wallet_test.vcxproj
-!projects/tests/cli_wallet_test_vs13/cli_wallet_test.sln
-.DS_Store
-.qmake.stash
-gui_wallet.app
-*wallet.json
-*after-import-key-*.wallet
-*.so*
+!sys/*/*/*.md
+!sys/*/*.md
+!sys/*.md
+!sys/*/install/server/*.bat
+
 
 prj/*/*/*
-!prj/*/*/*.vcxproj
-!prj/*/*/*.sln
+#prj
+prj/*/*/Debug
+prj/*/*/Release
+prj/*/*/DebugDbg
+prj/*/*/*/Debug
+prj/*/*/*/Release
+prj/*/*/*/DebugDbg
+prj/*/*/*/*/Debug
+prj/*/*/*/*/Release
+prj/*/*/*/*/DebugDbg
+
+
+!prj/*/*_vs*/*.sln
+!prj/*/*_vs*/*.vcxproj
+!prj/*/*_vs*/*.vcxproj.filters
+!prj/*/*_vs*/*.vdproj
+!prj/*/*_vs*/*/*.vcxproj
+!prj/*/*_vs*/*/*.vcxproj.filters
 !prj/*/*/*.pro
+!prj/*/*/*.cmake
 !prj/*/*_mkfl/Makefile
+!prj/common/*
+!prj/common/*/*
+!prj/common/*/*/*
+!prj/install/*/*.cpp
+workspaces/*/*
+!workspaces/*/*.sln
+moc_*.cpp
+.gitattributes
+.DS_Store
+.qmake.stash
+src/.original/*/*
+contrib/doocs/*
+*.objects
+*.objects/*
+*.suo
+*.VC.VC.opendb
+*.VC.db
+#include/.private/*.h
+#include/.private/*/*.h
+
