added submodule cpp-raft for orginizing matlabs as cluster

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/matlab"]
 	path = contrib/matlab
 	url = https://github.com/davitkalantaryan/matlabdev.git
+[submodule "contrib/cpp-raft"]
+	path = contrib/cpp-raft
+	url = https://github.com/davitkalantaryan/fork-cpp-raft.git
